--- a/WooCommerce/Resources/ja.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ja.lproj/Localizable.strings
@@ -1,10 +1,19 @@
-/* Translation-Revision-Date: 2019-08-22 00:54:03+0000 */
+/* Translation-Revision-Date: 2019-10-03 02:54:39+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ja_JP */
 
 /* No comment provided by engineer. */
+"%1$@ left a review on %2$@" = "%1$@ さんが %2$@ に関するレビューを書きました";
+
+/* Displays a time range followed by a specific date/time */
+"%1$@ › %2$@" = "%1$@ › %2$@";
+
+/* Displays a date range for a stats interval */
 "%1$@-%2$@" = "%1$@-%2$@";
+
+/* Review title. Reads as {Review author} left a review on {Product}. */
+"%1$@ left a review on %2$@" = "%1$@ さんが %2$@ に関するレビューを書きました";
 
 /* Title for an untitled post, should match WP core */
 "(no title)" = "(タイトルなし)";
@@ -67,6 +76,9 @@
 /* Mark all notifications as read notice */
 "All notifications marked as read" = "すべての通知が既読としてマークされました";
 
+/* Mark all reviews as read notice */
+"All reviews marked as read" = "すべての既読レビュー";
+
 /* Instructions for users with two-factor authentication enabled. */
 "Almost there! Please enter the verification code from your authenticator app." = "もう少しで完了です。認証アプリから認証コードを入力してください。";
 
@@ -87,6 +99,9 @@
 
 /* Used when a remote response doesn't have a specific message for a specific request */
 "An error occurred while processing your request: " = "リクエストの処理中にエラーが発生しました。";
+
+/* Indicates the reviewer does not have a name. It reads { Anonymous left a review} */
+"Anonymous" = "匿名";
 
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "アプリケーションログ";
@@ -125,8 +140,13 @@
 /* A descriptive label prefix. Example: 'Backorders: not allowed' */
 "Backorders:" = "入荷待ち :";
 
-/* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
+/* VoiceOver accessibility value about a specific bar in the revenue chart.It reads: Bar number {bar number} {summary of bar}.
+   VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "バー番号%1$i、%2$@、";
+
+/* Beta features navigation title
+   Navigates to Beta features screen */
+"Beta Features" = "ベータ版の機能";
 
 /* Billing title for customer info cell */
 "Billing details" = "請求詳細";
@@ -183,6 +203,15 @@
 /* Part of a prompt suggesting that there is more content for the user to read. */
 "Continue reading" = "続きを読む";
 
+/* Button title. Tapping begins log in using Google. */
+"Continue with Google" = "Continue with Google";
+
+/* Button title. Tapping begins our normal log in process. */
+"Continue with WordPress.com" = "Continue with WordPress.com";
+
+/* Shown while logging in with Apple and the app waits for the site creation process to complete. */
+"Continuing with Apple" = "Continuing with Apple";
+
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "コピー";
 
@@ -205,7 +234,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "接続できませんでした。必要な XML-RPC メソッドがサーバーにありません。";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem.";
+"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "接続できませんでした。あなたのサイトの XMLRPC エンドポイントにアクセスする際に、403エラーが発生しました。アプリがサイトと通信するためにはアクセスが必要です。ホスティングサービスに連絡して、この問題を解決してください。";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "接続できませんでした。ご利用のホスティングサービスは POST 要求をブロックしていますが、アプリはあなたのサイトとの通信に POST 要求を必要としています。ホスティングサービスに連絡して、この問題を解決してください。";
@@ -257,7 +286,7 @@
 "Discount" = "割引";
 
 /* Add a note screen - button title for closing the view
-   Dismiss button in store picker - Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
+   Dismiss button in store picker - Dismiss button title shown in alert warning users to upgrade to WC 3.5. - Dismiss button title shown in an alert displaying full purchase note text. - Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "非表示";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -403,6 +432,9 @@
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "無効の場合はメモが非公開になります";
 
+/* My Store > Settings > Beta features > Switch stats version */
+"Improved stats" = "Improved stats";
+
 /* Display label for the product's inventory stock status */
 "In stock" = "在庫あり";
 
@@ -446,7 +478,14 @@
 /* An error message shown when a wpcom user provides the wrong password. */
 "It seems like you've entered an incorrect password. Want to give it another try?" = "入力したパスワードが正しくないようです。もう一度試しますか ?";
 
-/* Settings > Privacy Settings. A text link to the cookie policy. */
+/* Last 24 hours section header */
+"Last 24 hours" = "過去24時間";
+
+/* Last 7 days section header */
+"Last 7 days" = "過去1週間";
+
+/* Settings > Privacy Settings. A text link to the cookie policy.
+   The action of the top banner on Dashboard that indicates new stats is unavailable */
 "Learn more" = "さらに詳しく";
 
 /* Licenses (information page title) */
@@ -485,10 +524,10 @@
 "Log in failed. Please try again." = "ログインに失敗しました。もう一度お試しください。";
 
 /* Instruction text on the login's email address screen. */
-"Log in to WordPress.com using an email address to manage all your WordPress sites." = "メールアドレスで WordPress.com にログインし、お持ちの WordPress サイトをすべて管理できます。";
+"Log in to the WordPress.com account you used to connect Jetpack." = "Jetpack を接続するのに使用した WordPress.com アカウントにログインします。";
 
 /* Instruction text on the login's email address screen. */
-"Log in to the WordPress.com account you used to connect Jetpack." = "Jetpack を接続するのに使用した WordPress.com アカウントにログインします。";
+"Log in to your WordPress.com account with your email address." = "Log in to your WordPress.com account with your email address.";
 
 /* Authentication Login Button */
 "Log in with Jetpack" = "Jetpack でログイン";
@@ -517,7 +556,8 @@
 /* Describes a domain that was mapped to WordPress.com, but registered elsewhere */
 "Mapped Domain" = "マッピング済みドメイン";
 
-/* Accessibility label for the Mark All Notifications as Read Button */
+/* Accessibility label for the Mark All Notifications as Read Button
+   Accessibility label for the Mark All Reviews as Read Button */
 "Mark All as Read" = "すべて既読にする";
 
 /* Fulfill Order Action Button */
@@ -525,6 +565,9 @@
 
 /* VoiceOver accessibility hint for the Mark All Notifications as Read Action */
 "Marks Every Notification as Read" = "すべての通知を既読にする";
+
+/* VoiceOver accessibility hint for the Mark All Reviews as Read Action */
+"Marks Every Review as Read" = "すべてのレビューを既読にする";
 
 /* Error message to show to users when trying to upload a media object with no local file associated */
 "Media doesn't have an associated file to upload." = "メディアにはアップロードする関連したファイルはありません。";
@@ -598,6 +641,9 @@
 /* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
 "No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
+/* Text displayed when no order data are available for the selected time range. */
+"No revenue this period" = "No revenue this period";
+
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "まだ出荷されていません";
 
@@ -618,6 +664,9 @@
 /* +2 Days Section Header */
 "Older than 2 days" = "2日以上前";
 
+/* +7 Days Section Header */
+"Older than 7 days" = "1週間より前";
+
 /* Months Section Header */
 "Older than a Month" = "1ヶ月以上前";
 
@@ -629,9 +678,6 @@
 
 /* Display label for the product's inventory stock status */
 "On back order" = "入荷待ち";
-
-/* Display label for the review's hold status */
-"On hold" = "保留中";
 
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "デバイス設定を開く";
@@ -647,6 +693,9 @@
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "オプションのトラッキング情報";
+
+/* Label for button to log in using site address. Underscores _..._ denote underline. */
+"Or log in by _entering your site address_." = "Or log in by _entering your site address_.";
 
 /* Add a note screen - title. Example: Order #15
    Order number title */
@@ -694,10 +743,14 @@
 "Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "(subject.totalValue) の支払いを (order.paymentMethodTitle) から受領しました";
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (totalValue) received via (order.paymentMethodTitle)" = "Payment of (totalValue) received via (order.paymentMethodTitle)";
+"Payment of (totalValue) received via (order.paymentMethodTitle)" = "(totalValue) の支払いを (order.paymentMethodTitle) から受領しました";
 
-/* Display label for the product's pending status */
+/* Display label for the product's pending status
+   Display label for the review's pending status */
 "Pending" = "承認待ち";
+
+/* Indicates a review is pending approval. It reads { Pending Review · Content of the review} */
+"Pending Review" = "Pending Review";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "電話番号: %@";
@@ -716,6 +769,9 @@
 
 /* Error message displayed when the user attempts use an invalid email address. */
 "Please enter a valid email address." = "正しいメールアドレスを入力してください。";
+
+/* No comment provided by engineer. */
+"Please enter the password for your WordPress.com account to log in with your Apple ID." = "Please enter the password for your WordPress.com account to log in with your Apple ID.";
 
 /* Popup message to ask for user credentials (fields shown below). */
 "Please enter your credentials" = "ログイン情報を入力してください。";
@@ -762,6 +818,9 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "商品 %ld がストアから削除されました";
 
+/* Title of the Products tab — plural form of Product */
+"Products" = "商品";
+
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "請求対象の顧客に電話で連絡するかメッセージを送信するか選択するよう求めます。";
 
@@ -777,7 +836,8 @@
 /* Product Details - purchase details section title */
 "Purchase Details" = "購入情報";
 
-/* Product Details > Purchase Details > Purchase note cell title */
+/* Product Details > Purchase Details > Purchase note cell title
+   Title for purchase note alert. */
 "Purchase note" = "注意事項";
 
 /* Quantity abbreviation for section title */
@@ -823,9 +883,6 @@
 
 /* Review moderation success notice message. It reads: Review marked as {new status} */
 "Review marked as %@" = "レビューを%@にしました";
-
-/* Description text used on the UI element displayed when a user has pending orders to process. */
-"Review, prepare, and ship these pending orders" = "保留中の注文を確認して準備し、配送してください";
 
 /* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
    Reviews descriptive label - Title of the Reviews tab — plural form of Review - Title that appears on top of the main Reviews screen (plural form of the word Review). */
@@ -1073,17 +1130,23 @@
 /* Error message informing the user that there was a problem clearing the block on site preventing its posts from displaying in the reader. */
 "There was a problem removing the block for specified site." = "指定したサイトのブロックを解除する際に問題が発生しました。";
 
-/* Top Performers section title - this month */
+/* Tab selector title that shows the statistics for this month
+   Top Performers section title - this month */
 "This Month" = "今月";
 
-/* Top Performers section title - this week */
+/* Tab selector title that shows the statistics for this week
+   Top Performers section title - this week */
 "This Week" = "今週";
 
-/* Top Performers section title - this year */
+/* Tab selector title that shows the statistics for this year
+   Top Performers section title - this year */
 "This Year" = "今年";
 
 /* Login Disclaimer Text and Jetpack config instructions. It reads: 'This app requires Jetpack to connect to your Store. Read the configuration instructions.' and it links to a web page on the words 'configuration instructions'. Place the second sentence after the `<br />` tag. Place the noun, \'configuration instructions' between the opening `<a` tag and the closing `</a>` tags. If a literal translation of 'Read the configuration instructions' does not make sense in your language, please use a contextually appropriate substitution. For example, you can translate it to say 'See: instructions' or any alternative that sounds natural in your language. */
 "This app requires Jetpack to connect to your Store. <br \/> Read the <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">configuration instructions<\/a>." = "このアプリを使用するには、Jetpack をストアに連携させる必要があります。<br \/><a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">設定に関する指示<\/a>を参照してください。";
+
+/* Body text of alert warning users to upgrade to WC 3.5. */
+"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app.";
 
 /* An error message informing the user the email address they entered did not match a WordPress.com account. */
 "This email address is not registered on WordPress.com." = "このメールアドレスは WordPress.com に登録されていません。";
@@ -1106,8 +1169,8 @@
 /* No comment provided by engineer. */
 "To proceed with this Google account, please first log in with your WordPress.com password. This will only be asked once." = "この Google アカウントで先に進むには、最初に WordPress.com パスワードを使用してログインしてください。これは一度しか尋ねられません。";
 
-/* Today Section Header
-   Top Performers section title - today */
+/* Tab selector title that shows the statistics for today
+   Today Section Header - Top Performers section title - today */
 "Today" = "今日";
 
 /* Header label for Top Performers section of My Store tab. */
@@ -1150,8 +1213,17 @@
 /* Connect when the SSL certificate is invalid */
 "Trust" = "信用する";
 
+/* The action of the top banner on Dashboard that indicates new stats is available */
+"Try It Now" = "今すぐお試しください";
+
 /* No comment provided by engineer. */
 "Try another account" = "別のアカウントでお試しください";
+
+/* The title of the top banner on Dashboard that indicates new stats is available */
+"Try our improved stats" = "強化された統計機能をお試しください";
+
+/* My Store > Settings > Beta features > Stats version description */
+"Try the new stats available with the WooCommerce Admin plugin" = "Try the new stats available with the WooCommerce Admin plugin";
 
 /* When social login fails, this button offers to let the user try again with a differen email address */
 "Try with another email" = "別のメールで試す";
@@ -1223,16 +1295,25 @@
 "Unknown error" = "不明なエラー";
 
 /* Display label for the review's unspam status */
-"Unspam" = "Unspam";
+"Unspam" = "スパム解除";
 
 /* Display label for the review's untrash status */
-"Untrash" = "Untrash";
+"Untrash" = "ゴミ箱から元に戻す";
 
 /* Footer text below the list of logs explaining the maximum number of logs saved. */
 "Up to seven days՚ worth of logs are saved." = "最大7日間分のログが保存されます。";
 
+/* Title of alert warning users to upgrade to WC 3.5 WITH a site name. It reads: Update {site name} to WooCommerce 3.5 to use this app */
+"Update %@ to WooCommerce 3.5" = "Update %@ to WooCommerce 3.5";
+
+/* Update instructions button title shown in alert warning users to upgrade to WC 3.5. */
+"Update Instructions" = "Update Instructions";
+
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "注文ステータスを更新";
+
+/* Title of alert warning users to upgrade to WC 3.5. */
+"Update to WooCommerce 3.5 to keep using this app" = "Update to WooCommerce 3.5 to keep using this app";
 
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "%ld時間前に更新";
@@ -1295,6 +1376,9 @@
 /* shown in promotional screens during first launch */
 "Watch readers from around the world read and interact with your site — in real time." = "サイトを訪れている世界中の読者の動向を、リアルタイムで確認できます。";
 
+/* The info of the top banner on Dashboard that indicates new stats is unavailable */
+"We have reverted to the old stats as we couldn’t find the WooCommerce Admin plugin" = "WooCommerce Admin プラグインが見つからないため、従来の統計機能に戻しました";
+
 /* Instructional text on how to open the email containing a magic link. */
 "We sent you a magic signup link! Check your email on this device, and tap the link in the email to finish signing up." = "マジック登録リンクを送信しました。このデバイスでメールをチェックして、メールにあるリンクをタップして登録を完了してください。";
 
@@ -1318,6 +1402,9 @@
 
 /* Label prefix. Example: 'Weight: 1kg' */
 "Weight:" = "重量 :";
+
+/* The info of the top banner on Dashboard that indicates new stats is available */
+"We’re rolling out improvements to stats for stores using the WooCommerce Admin plugin" = "WooCommerce Admin プラグインでストアに強化された統計機能を提供開始します";
 
 /* Title of alert helping users understand their site address */
 "What's my site address?" = "ご使用のサイトアドレス。";
@@ -1348,12 +1435,6 @@
 
 /* No comment provided by engineer. */
 "You cannot use that email address to signup. We are having problems with them blocking some of our email. Please use another email provider." = "ご指定のメールアドレスはアカウント登録にご利用いただけません。このメールプロバイダによって、こちらから送信するメールがブロックされる問題が発生することがあるためです。恐れ入りますが、他のメールプロバイダのアドレスをお使いください。";
-
-/* Title text used on the My Store UI when a user has a _single_ pending order to process. */
-"You have %ld order to fulfill" = "対応が必要な注文が%ld件あります";
-
-/* Title text used on the My Store UI when a user has _multiple_ pending orders to process. */
-"You have %ld orders to fulfill" = "対応が必要な注文が%ld件あります";
 
 /* No comment provided by engineer. */
 "You seem to have installed a mobile plugin from DudaMobile which is preventing the app to connect to your blog" = "アプリがブログに接続するのを防止するモバイルプラグインが DudaMobile からインストールされたようです。";
