--- a/WooCommerce/Resources/ru.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ru.lproj/Localizable.strings
@@ -1,10 +1,19 @@
-/* Translation-Revision-Date: 2019-09-04 00:54:03+0000 */
+/* Translation-Revision-Date: 2019-10-03 00:54:03+0000 */
 /* Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2); */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ru */
 
 /* No comment provided by engineer. */
+"%1$@ left a review on %2$@" = "Пользователь %1$@ оставил отзыв о %2$@";
+
+/* Displays a time range followed by a specific date/time */
+"%1$@ › %2$@" = "%1$@ › %2$@";
+
+/* Displays a date range for a stats interval */
 "%1$@-%2$@" = "%1$@–%2$@";
+
+/* Review title. Reads as {Review author} left a review on {Product}. */
+"%1$@ left a review on %2$@" = "Пользователь %1$@ оставил отзыв о %2$@";
 
 /* Title for an untitled post, should match WP core */
 "(no title)" = "(без заголовка)";
@@ -67,6 +76,9 @@
 /* Mark all notifications as read notice */
 "All notifications marked as read" = "Все уведомления помечены как прочитанные.";
 
+/* Mark all reviews as read notice */
+"All reviews marked as read" = "Все отзывы помечены как прочитанные";
+
 /* Instructions for users with two-factor authentication enabled. */
 "Almost there! Please enter the verification code from your authenticator app." = "Почти готово! Введите проверочный код из приложения Authenticator.";
 
@@ -87,6 +99,9 @@
 
 /* Used when a remote response doesn't have a specific message for a specific request */
 "An error occurred while processing your request: " = "Возникла ошибка при обработке вашего запроса:";
+
+/* Indicates the reviewer does not have a name. It reads { Anonymous left a review} */
+"Anonymous" = "Анонимный пользователь";
 
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "Журналы приложения";
@@ -125,8 +140,13 @@
 /* A descriptive label prefix. Example: 'Backorders: not allowed' */
 "Backorders:" = "Отложенные заказы:";
 
-/* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
+/* VoiceOver accessibility value about a specific bar in the revenue chart.It reads: Bar number {bar number} {summary of bar}.
+   VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "Номер столбца %1$i, %2$@, ";
+
+/* Beta features navigation title
+   Navigates to Beta features screen */
+"Beta Features" = "Функции в бета-режиме";
 
 /* Billing title for customer info cell */
 "Billing details" = "Платёжные сведения";
@@ -182,6 +202,15 @@
 
 /* Part of a prompt suggesting that there is more content for the user to read. */
 "Continue reading" = "Читать дальше";
+
+/* Button title. Tapping begins log in using Google. */
+"Continue with Google" = "Continue with Google";
+
+/* Button title. Tapping begins our normal log in process. */
+"Continue with WordPress.com" = "Continue with WordPress.com";
+
+/* Shown while logging in with Apple and the app waits for the site creation process to complete. */
+"Continuing with Apple" = "Continuing with Apple";
 
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "Копировать";
@@ -257,7 +286,7 @@
 "Discount" = "Скидка";
 
 /* Add a note screen - button title for closing the view
-   Dismiss button in store picker - Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
+   Dismiss button in store picker - Dismiss button title shown in alert warning users to upgrade to WC 3.5. - Dismiss button title shown in an alert displaying full purchase note text. - Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Игнорировать";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -403,6 +432,9 @@
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "При отключении примечание будет закрытым";
 
+/* My Store > Settings > Beta features > Switch stats version */
+"Improved stats" = "Improved stats";
+
 /* Display label for the product's inventory stock status */
 "In stock" = "Есть в наличии";
 
@@ -446,7 +478,14 @@
 /* An error message shown when a wpcom user provides the wrong password. */
 "It seems like you've entered an incorrect password. Want to give it another try?" = "Похоже, вы ввели неправильный пароль. Хотите попытаться ещё раз?";
 
-/* Settings > Privacy Settings. A text link to the cookie policy. */
+/* Last 24 hours section header */
+"Last 24 hours" = "Последние 24 часа";
+
+/* Last 7 days section header */
+"Last 7 days" = "Последние 7 дней";
+
+/* Settings > Privacy Settings. A text link to the cookie policy.
+   The action of the top banner on Dashboard that indicates new stats is unavailable */
 "Learn more" = "Подробнее";
 
 /* Licenses (information page title) */
@@ -485,10 +524,10 @@
 "Log in failed. Please try again." = "Не удалось выполнить вход. Повторите попытку.";
 
 /* Instruction text on the login's email address screen. */
-"Log in to WordPress.com using an email address to manage all your WordPress sites." = "Для управления всеми своими сайтами WordPress войдите в систему WordPress.com с помощью адреса электронной почты.";
+"Log in to the WordPress.com account you used to connect Jetpack." = "Войдите в учетную запись WordPress.com, через которую подключен Jetpack.";
 
 /* Instruction text on the login's email address screen. */
-"Log in to the WordPress.com account you used to connect Jetpack." = "Войдите в учетную запись WordPress.com, через которую подключен Jetpack.";
+"Log in to your WordPress.com account with your email address." = "Log in to your WordPress.com account with your email address.";
 
 /* Authentication Login Button */
 "Log in with Jetpack" = "Войти с помощью Jetpack";
@@ -517,7 +556,8 @@
 /* Describes a domain that was mapped to WordPress.com, but registered elsewhere */
 "Mapped Domain" = "Привязанный домен";
 
-/* Accessibility label for the Mark All Notifications as Read Button */
+/* Accessibility label for the Mark All Notifications as Read Button
+   Accessibility label for the Mark All Reviews as Read Button */
 "Mark All as Read" = "Отметить все как прочитанные";
 
 /* Fulfill Order Action Button */
@@ -525,6 +565,9 @@
 
 /* VoiceOver accessibility hint for the Mark All Notifications as Read Action */
 "Marks Every Notification as Read" = "Отметить все уведомления как прочитанные";
+
+/* VoiceOver accessibility hint for the Mark All Reviews as Read Action */
+"Marks Every Review as Read" = "Все уведомления будут отмечены как прочитанные";
 
 /* Error message to show to users when trying to upload a media object with no local file associated */
 "Media doesn't have an associated file to upload." = "Мультимедиа объект не имеет ассоциированного файла для загрузки.";
@@ -598,6 +641,9 @@
 /* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
 "No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
+/* Text displayed when no order data are available for the selected time range. */
+"No revenue this period" = "No revenue this period";
+
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Еще не отправлено";
 
@@ -618,6 +664,9 @@
 /* +2 Days Section Header */
 "Older than 2 days" = "Старше двух дней";
 
+/* +7 Days Section Header */
+"Older than 7 days" = "Старше 7 дней";
+
 /* Months Section Header */
 "Older than a Month" = "Старше месяца";
 
@@ -629,9 +678,6 @@
 
 /* Display label for the product's inventory stock status */
 "On back order" = "Ожидается поставка";
-
-/* Display label for the review's hold status */
-"On hold" = "Отложен";
 
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "Открыть настройки устройства";
@@ -647,6 +693,9 @@
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "Дополнительная информация об отслеживании";
+
+/* Label for button to log in using site address. Underscores _..._ denote underline. */
+"Or log in by _entering your site address_." = "Or log in by _entering your site address_.";
 
 /* Add a note screen - title. Example: Order #15
    Order number title */
@@ -696,8 +745,12 @@
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "Платёж на сумму (totalValue) получен через (order.paymentMethodTitle)";
 
-/* Display label for the product's pending status */
+/* Display label for the product's pending status
+   Display label for the review's pending status */
 "Pending" = "Ожидает проверки";
+
+/* Indicates a review is pending approval. It reads { Pending Review · Content of the review} */
+"Pending Review" = "На утверждении";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "Номер телефона: %@";
@@ -716,6 +769,9 @@
 
 /* Error message displayed when the user attempts use an invalid email address. */
 "Please enter a valid email address." = "Пожалуйста, введите корректный адрес e-mail.";
+
+/* No comment provided by engineer. */
+"Please enter the password for your WordPress.com account to log in with your Apple ID." = "Please enter the password for your WordPress.com account to log in with your Apple ID.";
 
 /* Popup message to ask for user credentials (fields shown below). */
 "Please enter your credentials" = "Пожалуйста, введите ваши учётные данные";
@@ -762,6 +818,9 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "Product %ld has been removed from your store";
 
+/* Title of the Products tab — plural form of Product */
+"Products" = "Товары";
+
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Позвонить или отправить сообщение плательщику.";
 
@@ -777,7 +836,8 @@
 /* Product Details - purchase details section title */
 "Purchase Details" = "Подробные сведения о приобретении";
 
-/* Product Details > Purchase Details > Purchase note cell title */
+/* Product Details > Purchase Details > Purchase note cell title
+   Title for purchase note alert. */
 "Purchase note" = "Уведомление о приобретении";
 
 /* Quantity abbreviation for section title */
@@ -823,9 +883,6 @@
 
 /* Review moderation success notice message. It reads: Review marked as {new status} */
 "Review marked as %@" = "Обзор помечен как %@";
-
-/* Description text used on the UI element displayed when a user has pending orders to process. */
-"Review, prepare, and ship these pending orders" = "Просмотреть, подготовить и отправить эти ожидающие заказы";
 
 /* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
    Reviews descriptive label - Title of the Reviews tab — plural form of Review - Title that appears on top of the main Reviews screen (plural form of the word Review). */
@@ -1073,17 +1130,23 @@
 /* Error message informing the user that there was a problem clearing the block on site preventing its posts from displaying in the reader. */
 "There was a problem removing the block for specified site." = "При снятии блокировки для указанного веб-сайта произошла ошибка.";
 
-/* Top Performers section title - this month */
+/* Tab selector title that shows the statistics for this month
+   Top Performers section title - this month */
 "This Month" = "В этом месяце";
 
-/* Top Performers section title - this week */
+/* Tab selector title that shows the statistics for this week
+   Top Performers section title - this week */
 "This Week" = "На этой неделе";
 
-/* Top Performers section title - this year */
+/* Tab selector title that shows the statistics for this year
+   Top Performers section title - this year */
 "This Year" = "В этом году";
 
 /* Login Disclaimer Text and Jetpack config instructions. It reads: 'This app requires Jetpack to connect to your Store. Read the configuration instructions.' and it links to a web page on the words 'configuration instructions'. Place the second sentence after the `<br />` tag. Place the noun, \'configuration instructions' between the opening `<a` tag and the closing `</a>` tags. If a literal translation of 'Read the configuration instructions' does not make sense in your language, please use a contextually appropriate substitution. For example, you can translate it to say 'See: instructions' or any alternative that sounds natural in your language. */
 "This app requires Jetpack to connect to your Store. <br \/> Read the <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">configuration instructions<\/a>." = "Для подключения к вашему магазину приложению требуется Jetpack. <br \/> См. <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">инструкции по настройке<\/a>.";
+
+/* Body text of alert warning users to upgrade to WC 3.5. */
+"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app.";
 
 /* An error message informing the user the email address they entered did not match a WordPress.com account. */
 "This email address is not registered on WordPress.com." = "Этот адрес электронной почты не зарегистрирован на WordPress.com.";
@@ -1106,8 +1169,8 @@
 /* No comment provided by engineer. */
 "To proceed with this Google account, please first log in with your WordPress.com password. This will only be asked once." = "Чтобы войти через эту учетную запись Google, пожалуйста войдите сначала с паролем WordPress.com. Это запрашивается только один раз.";
 
-/* Today Section Header
-   Top Performers section title - today */
+/* Tab selector title that shows the statistics for today
+   Today Section Header - Top Performers section title - today */
 "Today" = "Сегодня";
 
 /* Header label for Top Performers section of My Store tab. */
@@ -1150,8 +1213,17 @@
 /* Connect when the SSL certificate is invalid */
 "Trust" = "Безопасность";
 
+/* The action of the top banner on Dashboard that indicates new stats is available */
+"Try It Now" = "Попробовать";
+
 /* No comment provided by engineer. */
 "Try another account" = "Попробовать другую учётную запись";
+
+/* The title of the top banner on Dashboard that indicates new stats is available */
+"Try our improved stats" = "Оцените улучшенный раздел статистики";
+
+/* My Store > Settings > Beta features > Stats version description */
+"Try the new stats available with the WooCommerce Admin plugin" = "Try the new stats available with the WooCommerce Admin plugin";
 
 /* When social login fails, this button offers to let the user try again with a differen email address */
 "Try with another email" = "Попробуйте с другим email";
@@ -1231,8 +1303,17 @@
 /* Footer text below the list of logs explaining the maximum number of logs saved. */
 "Up to seven days՚ worth of logs are saved." = "Журналы хранятся в течение 7 дней.";
 
+/* Title of alert warning users to upgrade to WC 3.5 WITH a site name. It reads: Update {site name} to WooCommerce 3.5 to use this app */
+"Update %@ to WooCommerce 3.5" = "Update %@ to WooCommerce 3.5";
+
+/* Update instructions button title shown in alert warning users to upgrade to WC 3.5. */
+"Update Instructions" = "Update Instructions";
+
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "Обновить статус заказа";
+
+/* Title of alert warning users to upgrade to WC 3.5. */
+"Update to WooCommerce 3.5 to keep using this app" = "Update to WooCommerce 3.5 to keep using this app";
 
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "Обновлено %ld час назад";
@@ -1295,6 +1376,9 @@
 /* shown in promotional screens during first launch */
 "Watch readers from around the world read and interact with your site — in real time." = "Наблюдайте, как пользователи со всего света читают ваш сайт и взаимодействуют с ним в реальном времени.";
 
+/* The info of the top banner on Dashboard that indicates new stats is unavailable */
+"We have reverted to the old stats as we couldn’t find the WooCommerce Admin plugin" = "Восстановлен прежний формат статистики, поскольку плагин администратора WooCommerce не обнаружен";
+
 /* Instructional text on how to open the email containing a magic link. */
 "We sent you a magic signup link! Check your email on this device, and tap the link in the email to finish signing up." = "Мы послали вам магическую ссылку для регистрации. Проверьте вашу почту и нажмите присланную ссылку для завершения регистрации.";
 
@@ -1318,6 +1402,9 @@
 
 /* Label prefix. Example: 'Weight: 1kg' */
 "Weight:" = "Вес:";
+
+/* The info of the top banner on Dashboard that indicates new stats is available */
+"We’re rolling out improvements to stats for stores using the WooCommerce Admin plugin" = "Представляем вам улучшенную статистику для магазинов, использующих плагин администратора WooCommerce";
 
 /* Title of alert helping users understand their site address */
 "What's my site address?" = "Какой адрес у моего сайта?";
@@ -1348,12 +1435,6 @@
 
 /* No comment provided by engineer. */
 "You cannot use that email address to signup. We are having problems with them blocking some of our email. Please use another email provider." = "Этот почтовый адрес нельзя использовать для регистрации. Некоторые из наших писем блокируются данной почтовой службой. Пожалуйста, используйте другую службу.";
-
-/* Title text used on the My Store UI when a user has a _single_ pending order to process. */
-"You have %ld order to fulfill" = "У вас есть %ld невыполненный заказ";
-
-/* Title text used on the My Store UI when a user has _multiple_ pending orders to process. */
-"You have %ld orders to fulfill" = "У вас есть невыполненные заказы (%ld)";
 
 /* No comment provided by engineer. */
 "You seem to have installed a mobile plugin from DudaMobile which is preventing the app to connect to your blog" = "Скорее всего, вы установили мобильный плагин DudaMobile, который не даёт приложению подключиться к вашему блогу";
