--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,3 +1,5 @@
-- 有些使用者可以在登入畫面上看到自己的網站，但無法點選「繼續」。這個問題已獲得修復。
-- 成為厲害的賣家值得慶賀，所以我們將「訂單」徽章做得更容易辨識。
-- 我們發現你已經無法再從「訂單詳細資料」畫面自動下載產品影像。這項下載功能已復原。
+- 我們已為 WooCommerce 管理員外掛程式提供全新的統計資料頁面 (包含更多細分分析)！從「設定」頁面即可選用此功能。
+- 我們已修正「產品詳細資訊」頁面中價格貨幣顯示錯誤的情況。
+- 發現 App 記錄可進行編輯後，我們已確認使用者之後只能複製這些內容。
+- 由於「訂單」分頁顯示了所有訂單資訊，我們已簡化「我的商店」分頁設計，並將「新訂單」卡片從中移除。
+- 你可能會希望「評論」能夠進行本地化，現在成真了 (我們已修正之前的錯誤)。
