--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,3 +1,5 @@
-- 일부 사용자가 로그인 화면에서 사이트를 볼 수 있으나 계속을 누를 수 없었습니다. 이제 해당 문제가 해결되었습니다.
-- 제품을 많이 판매하는 사람들의 업적을 높이 사기 위해 더 쉽게 읽을 수 있는 주문 배지를 만들었습니다.
-- 더 이상 주문 세부정보 화면에서 제품 이미지를 자동으로 다운로드할 수 없음을 확인했습니다. 해당 기능을 복원하여 이제 다운로드할 수 있습니다.
+- WooCommerce 관리자 플러그인을 사용하는 사람들을 위한 새로운 통계 페이지(더 세분화된 분석 기능 포함)가 출시되었습니다! 설정 페이지에서 옵트인할 수 있습니다.
+- 제품 세부정보 페이지에서 가격이 잘못된 통화로 표시되는 버그가 수정되었습니다.
+- 앱 로그가 편집될 수 있음을 발견한 후 복사 전용임을 확인했습니다.
+- 주문 탭에 모든 주문 정보가 표시되므로 내 스토어 탭을 간소화하고 새 주문 카드를 제거했습니다.
+- 이제 리뷰가 현지화되어 제공됩니다. (이전에 버그가 발생했으며 해결되었습니다.)
