--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,3 +1,5 @@
-- Alguns usuários viam seus sites na tela de login, mas não conseguiam clicar em Continuar. Isso foi corrigido.
-- Ser um vendedor produtivo é algo a se comemorar. Por isso, fizemos com que a leitura do selo de pedidos seja bem mais fácil.
-- Descobrimos que não era mais possível baixar automaticamente imagens de produtos na tela Detalhes do pedido. Restauramos a capacidade de fazer downloads.
+- Há uma nova página de estatísticas com análises mais granulares para quem usa o plugin WooCommerce Admin! Ative-a nas Configurações.
+- Corrigimos um bug que exibia preços na moeda errada na página Detalhes do produto.
+- Após saber que registros do app são editáveis, garantimos que sejam só cópias no futuro.
+- Com a guia Pedidos exibindo todos os dados de pedidos, simplificamos a guia Minha loja e tiramos o cartão Novos pedidos dela.
+- Agora as Avaliações são traduzidas, graças a um bug corrigido.
