--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,5 @@
-- Некоторые пользователи могли видеть свой сайт на экране входа, но не могли нажать «Продолжить». Мы это исправили.
-- Успешного продавца стоит отметить — поэтому мы сделали значок «Заказы» хорошо читаемым.
-- Мы заметили, что изображения продуктов с экрана «Описание заказа» перестали автоматически загружаться. Мы вернули возможность их загружать.
+– Те, кто использует плагин администратора WooCommerce, оценят новую страницу статистики, содержащую более подробные аналитические сведения. Чтобы использовать ее, выберите нужный параметр на странице "Настройки".
+– Исправлена ошибка, из-за которой цены на странице "Сведения о продукте" показывались в неверной валюте.
+– Обнаружив, что журналы приложений могут редактироваться, мы изменили список доступных операций: теперь журналы можно только копировать.
+– Поскольку на вкладке "Заказы" теперь отображается вся информация о заказах, карточка "Новые заказы" удалена с вкладки "Мой магазин".
+– Страница "Отзывы" смотрится лучше, если ее содержимое локализовано, и теперь дело обстоит именно так: ошибка, из-за которой возникала проблема с локализацией, исправлена.
