--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,3 +1,5 @@
-- Bazı müşterilerimiz oturum açma ekranında kendi sitesini görebiliyor ancak Devam’a dokunamıyordu. Bunu düzelttik.
-- Çok satış yapan bir satıcı olmak kutlanmaya değer, bu nedenle Siparişler rozetini okumayı çok daha kolay hale getirdik.
-- Sipariş Ayrıntıları ekranındaki ürün resimlerini artık otomatik olarak indiremediğinizi tespit ettik. Bunları yeniden indirilebilir hale getirdik.
+- WooCommerce Yönetici eklentisini kullananlar için yepyeni bir istatistik sayfası oluşturuldu (daha ayrıntılı analiz içeriyor)! Ayarlar sayfasından kullanmayı seçebilirsiniz.
+- Ürün Ayrıntıları sayfasında fiyatların yanlış para biriminde gösterilmesine neden olan bir hatayı düzelttik.
+- Uygulama günlüklerinin düzenlenebileceğini keşfettikten sonra, sadece kopya olarak devam etmelerini sağladık.
+- Siparişler sekmesi şimdi tüm sipariş bilgilerinizi görüntülediğinden, Mağazam sekmesini düzenledik ve Yeni Siparişler kartını kaldırdık.
+- Muhtemelen Yorumlar'ın yerelleştirilmesini istiyordunuz, şimdi bu da halledildi (bir hata vardı ve düzeltildi).
